/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package site_explorer;

import "google/protobuf/duration.proto";

// Data that we gathered about a particular endpoint during site exploration
message EndpointExplorationReport {
  // The type of the endpoint
  string endpoint_type = 1;
  // If the endpoint could not be explored, this contains the last error
  // The error is serialized in JSON format
  optional string last_exploration_error = 2;
  // If the endpoint is a BMC that belongs to a Machine and enough data is
  // available to calculate the `MachineId`, this field contains the `MachineId`
  optional string machine_id = 3;
  /// The time it took to explore the endpoint in the last site explorer run
  optional google.protobuf.Duration last_exploration_latency = 4;

  // Redfish data starts here:

  // Vendor as reported by Redfish
  optional string vendor = 11;
  // `Managers` reported by Redfish
  repeated Manager managers = 12;
  // `Systems` reported by Redfish
  repeated ComputerSystem systems = 13;
  // `Chassis` reported by Redfish
  repeated Chassis chassis = 14;
  // `Service` reported by Redfish
  repeated Service service = 15;
  // `MachineSetupStatus` reported by Redfish
  MachineSetupStatus machine_setup_status = 16;
  // `SecureBootStatus` reported by Redfish
  SecureBootStatus secure_boot_status = 17;
  // `LockdownStatus` reported by Redfish
  LockdownStatus lockdown_status = 18;
}

message ExploredEndpoint {
  // The IP address of the endpoint we explored
  string address = 1;
  // The data we gathered about the endpoint
  EndpointExplorationReport report = 2;
  // The version of `report`.
  // Will increase every time the report gets updated.
  string report_version = 3;
  /// Whether the endpoint will be explored in the next site-explorer run
  bool exploration_requested = 4;
  // The current preingestion state
  string preingestion_state = 5;
  // Last BMC redfish reset time
  string last_redfish_bmc_reset = 6;
  // Last BMC IPMI reset time
  string last_ipmitool_bmc_reset = 7;
  // Last BMC redfish reboot time
  string last_redfish_reboot = 8;
  // Last BMC redfish powercycle
  string last_redfish_powercycle = 9;
  // Flag to prevent site explorer from taking remediation actions on redfish errors
  bool pause_remediation = 10;
}

// Information about explored DPU that was discovered via Site Exploration
message ExploredDpu {
  // The DPUs BMC IP
  string bmc_ip = 1;
  // The MAC address that is visible to the host (provided by the DPU)
  optional string host_pf_mac_address = 2;
}

// A combination of DPU and host that was discovered via Site Exploration
message ExploredManagedHost {
  // The Hosts BMC IP
  string host_bmc_ip = 1;
  // The DPUs BMC IP
  string dpu_bmc_ip = 2;
  // The MAC address that is visible to the host (provided by the DPU)
  optional string host_pf_mac_address = 3;
  // List of explored DPUs attached to this host
  repeated ExploredDpu dpus = 11;
}

message SiteExplorationReport {
  // The endpoints that had been explored
  repeated ExploredEndpoint endpoints = 1;
  // The managed-hosts which have been explored
  repeated ExploredManagedHost managed_hosts = 2;
}

message ExploredEndpointSearchFilter {
    // empty now, but maybe in the future we add a way to filter
}

message ExploredEndpointIdList {
  // endpoint IP address is used as an ID
  repeated string endpoint_ids = 1;
}

message ExploredEndpointsByIdsRequest {
  // endpoint IP address is used as an ID
  repeated string endpoint_ids = 1;
}

message ExploredEndpointList {
  repeated ExploredEndpoint endpoints = 1;
}

message ExploredManagedHostSearchFilter {
    // empty now, but maybe in the future we add a way to filter
}

message ExploredManagedHostIdList {
  // host bmc IP address is used as an ID
  repeated string host_ids = 1;
}

message ExploredManagedHostsByIdsRequest {
  // host bmc IP address is used as an ID
  repeated string host_ids = 1;
}

message ExploredManagedHostList {
  repeated ExploredManagedHost managed_hosts = 1;
}

enum NicMode {
  DPU = 0;
  NIC = 1;
}

message ComputerSystemAttributes {
  optional NicMode nic_mode = 1;
}

// `ComputerSystem` definition. Matches redfish definition
message ComputerSystem {
  string id = 1;
  optional string manufacturer = 2;
  optional string model = 3;
  optional string serial_number = 4;
  ComputerSystemAttributes attributes = 5;

  repeated EthernetInterface ethernet_interfaces = 11;
  repeated PCIeDevice pcie_devices = 12;
  ComputerSystemPowerState power_state = 13;
  optional BootOrder boot_order = 14;
}

enum ComputerSystemPowerState {
  On = 0;
  Off = 1;
  PoweringOff = 2;
  PoweringOn = 3;
  Paused = 4;
}

// `Manager` definition. Matches redfish definition
message Manager {
  string id = 1;
  repeated EthernetInterface ethernet_interfaces = 11;
}

// `EthernetInterface` definition. Matches redfish definition
message EthernetInterface {
  optional string id = 1;
  optional string description = 2;
  optional bool interface_enabled = 3;
  optional string mac_address = 4;
}

// `Chassis` definition. Matches redfish definition
message Chassis {
  string id = 1;
  repeated NetworkAdapter network_adapters = 2;
  optional string manufacturer = 6;
  optional string model = 3;
  optional string part_number = 4;
  optional string serial_number = 5;    
}

// `NetworkAdapter` definition. Matches redfish definition
message NetworkAdapter {
  string id = 1;
  optional string manufacturer = 2;
  optional string model = 3;
  optional string part_number = 4;
  optional string serial_number = 5;
}

// `Service` definition. Matches redfish definition `UpdateService`
message Service {
  string id = 1;
  repeated Inventory inventories = 2;
}

// `Inventory` definition. Matches redfish definition
message Inventory {
  string id = 1;
  optional string description = 2;
  optional string version = 3;
  optional string release_date = 4;
}

// `MachineSetupStatus` definition. Matches redfish definition
message MachineSetupStatus {
  bool is_done = 1;
  repeated MachineSetupDiff diffs = 2;
}

// `MachineSetupDiff` definition. Matches redfish definition
message MachineSetupDiff {
  string key = 1;
  string expected = 2;
  string actual = 3;
}

message PCIeDevice {
  optional string description = 1;
  optional string firmware_version = 2;
  optional string gpu_vendor = 3;
  optional string id = 4;
  optional string manufacturer = 5;
  optional string name = 6;
  optional string part_number = 7;
  optional string serial_number = 8;
  optional SystemStatus status = 9;
}

message SystemStatus {
  optional string health = 1;
  optional string health_rollup = 2;
  string state = 3;
}

message BootOrder {
  repeated BootOption boot_order = 1;
}

message BootOption {
  string display_name = 1;
  string id = 2;
  optional bool boot_option_enabled = 3;
  optional string uefi_device_path = 4;
}

message SecureBootStatus {
  bool is_enabled = 1;
}

// `LockdownStatus` definition. Matches redfish definition
message LockdownStatus {
  InternalLockdownStatus status = 1;
  string message = 2;
}

// `InternalLockdownStatus` definition. Matches redfish definition
enum InternalLockdownStatus {
  ENABLED = 0;
  PARTIAL = 1;
  DISABLED = 2;
}
